8238175: CTW: Class.getDeclaredMethods fails with assert(k->is_subclass_of(SystemDictionary::Throwable_klass())) failed: invalid exception class

Replace the assert with a logging message saying that the class is not a subclass of java.lang.Throwable

Reviewed-by: dholmes, coleenp